fixed horizontal scroll

--- a/src/components/Dropdown/Dropdown.css
+++ b/src/components/Dropdown/Dropdown.css
@@ -99,7 +99,7 @@
 
 .filtersList li {
   padding: 4px 8px;
-  width: calc(100% - 10px);
+  width: calc(100% - 18px);
   margin-left: 1px;
 }
 
